# simple-secret-mananger

./: .gitignore  README.md  dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: 77966d4ca9a1_initial.py  f4e14f0d0700_add_unique_link_constraint.py
backend/: .gitignore  config.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/api/: client.py  keys.py  links.py  secrets.py
backend/dtos/: __init__.py  api_key.py  links.py  me.py  secret.py
backend/models/: __init__.py  api_key.py  links.py  secret.py
backend/scripts/: export_openapi.py
backend/services/: __init__.py  api_keys.py  auth.py  links.py  secrets.py
frontend/: index.html  openapi-ts.config.ts  openapi.json  package.json  vite.config.ts
frontend/src/: App.tsx  client-setup.ts  index.css  main.tsx
frontend/src/client/: index.ts  schemas.gen.ts  sdk.gen.ts  types.gen.ts  zod.gen.ts
frontend/src/components/data/: secrets-page.tsx
frontend/src/components/modals/: CreateApiKeyModal.tsx  CreateLinkModal.tsx  CreateSecretModal.tsx  ViewApiKeyModal.tsx  ViewLinkModal.tsx  ViewSecretModal.tsx
frontend/src/components/ui/: checkbox.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  sheet.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: ApiKeysPage.tsx  DashboardLayout.tsx  LinksPage.tsx  Login.tsx  SecretsPage.tsx
frontend/src/providers/: AuthProvider.tsx
