[project]
name = "secretsmananger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "uvicorn>=0.42.0",
    "sqlalchemy",
    "passlib[bcrypt]",
    "pydantic",
    "pydantic-settings",
    "python-multipart",
    "ruff",
    "pyright",
    "alembic>=1.18.4",
    "loguru>=0.7.3",
]

[tool.pyright]
typeCheckingMode = "strict"
extraPaths = ["backend", "alembic"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "ANN", "B", "I", "UP"]
ignore = ["ANN101", "ANN102", "ANN401", "B008"]
